Support changing run trips result on dispatch screen

--- a/app/views/trips/_form_header.html.haml
+++ b/app/views/trips/_form_header.html.haml
@@ -2,7 +2,7 @@
   - if edit_mode == :new
     .pull-right
       = f.submit translate_helper(:save), class: 'btn action-button'
-      = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? trips_runs_path : trips_path), class: "btn btn-default"
+      = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? trips_runs_path(run_id: params[:run_id]) : trips_path), class: "btn btn-default"
     %h1
       = translate_helper("new_trip")
       - if @trip.run
@@ -13,13 +13,13 @@
     .pull-right
       - if edit_mode == :edit
         = f.submit translate_helper(:update), class: 'btn action-button'
-        = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? trips_runs_path : trips_path), class: "btn btn-default"
+        = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? trips_runs_path(run_id: params[:run_id]) : trips_path), class: "btn btn-default"
       - else
         = link_to(translate_helper("delete"), @trip, data: {:confirm => translate_helper("delete_trip_confirm")}, :method => :delete, :id => 'trip_delete', :class=>'btn action-button btn-danger') if !@trip.new_record? && can?(:destroy, @trip)
         = link_to translate_helper("edit"), edit_trip_path(@trip), :class=>'btn action-button' if !@trip.new_record? && can?(:edit, @trip)
         = link_to translate_helper("clone_trip"), clone_trip_path(@trip), :class=>'btn action-button' if can?(:create, Trip) && @trip.customer && @trip.customer.active?
         = link_to translate_helper("create_return_trip"), return_trip_path(@trip), :class=>'btn action-button' if can?(:create, Trip) && @trip.is_outbound? && !@trip.return_trip.present? && @trip.customer && @trip.customer.active_for_date?(@trip.date)
-        = link_to translate_helper(:back), (params[:from_dispatch] == 'true' ? trips_runs_path : trips_path), class: "btn btn-default"
+        = link_to translate_helper(:back), (params[:from_dispatch] == 'true' ? trips_runs_path(run_id: params[:run_id]) : trips_path), class: "btn btn-default"
     %h1
       = translate_helper("trip")
       - if @trip.run
