--- a/app/views/trips_runs/_run_trips_panel.html.haml
+++ b/app/views/trips_runs/_run_trips_panel.html.haml
@@ -7,6 +7,9 @@
         %span.dispatch-action
           = link_to cancel_run_trips_runs_path(run_id: run.id), title: 'Cancel run', style: 'color: white;', remote: true, data: {confirm: 'Are you sure to cancel this run?'} do 
             %i.fa.fa-undo
+      %span.dispatch-action
+        = link_to run_path(run, from_dispatch: true), style: 'color: white;', title: "View details" do 
+          %i.fa.fa-external-link
       - if can?(:edit, run)
         %span.dispatch-action
           = link_to edit_run_path(run, from_dispatch: true), style: 'color: white;', title: 'Edit' do 
