--- a/app/views/trips_runs/_run_trips_panel.html.haml
+++ b/app/views/trips_runs/_run_trips_panel.html.haml
@@ -46,7 +46,29 @@
       }
       var run_id = #{run.id};
       if(prev_run_id == run_id) {
-        // TODO: same run, itinerary sequence change
+        var new_manifest_order = [];
+        source_panel.find('table tr.manifest-row').each(function(tr) {
+          new_manifest_order.push($(this).data('id'));
+        });
+        // same run, itinerary sequence change
+        var leg_flag = ui.draggable.data('leg-id');
+        var itin_id = $(this).data('id');
+        current_itin_index = new_manifest_order.indexOf(itin_id);
+
+        var is_pickup = (leg_flag == '1');
+        var the_other_leg_flag = (is_pickup ? '2' : '1');
+        other_itin_index = new_manifest_order.indexOf("trip_" + trip_id + "_leg_" + the_other_leg_flag);
+        if(is_pickup && other_itin_index < current_itin_index) {
+          bootbox.alert('Pickup cannot be scheduled after the dropoff');
+          $("#run_trips_panel_" + run_id + " table tbody").sortable('cancel');
+          return;
+        } else if(!is_pickup && current_itin_index < other_itin_index) {
+          bootbox.alert('Dropoff cannot be scheduled before the pickup');
+          $("#run_trips_panel_" + run_id + " table tbody").sortable('cancel');
+          return;
+        }
+
+        change_run_manifest_order(run_id);
       } else {
         schedule_trip(trip_id, run_id, prev_run_id);
       }
