--- a/app/views/trips/_ask_for_return_trip_dialog.html.haml
+++ b/app/views/trips/_ask_for_return_trip_dialog.html.haml
@@ -13,10 +13,10 @@
           = translate_helper(:ask_for_creating_return_trip_message)
           .col-sm-12{style: 'padding: 5px;'}
             = f.label :pickup_time, translate_helper("pickup_time")
-            = f.text_field :pickup_time, value: '', class: 'time-picker form-control', readonly: true
+            = render 'time_field', field_name: :pickup_time, time: nil, f: f
           .col-sm-12{style: 'padding: 5px;'}
             = f.label :appointment_time, translate_helper("appointment_time")
-            = f.text_field :appointment_time, value: '', class: 'time-picker form-control', readonly: true
+            = render 'time_field', field_name: :appointment_time, time: nil, f: f
 
   = render "shared/date_time_picker_javascript"
   :javascript
