--- a/app/views/trips/_trip_parameters_panel.html.haml
+++ b/app/views/trips/_trip_parameters_panel.html.haml
@@ -36,20 +36,12 @@
       .col-sm-3
         = f.label :pickup_time, translate_helper("pickup_time")
       .col-sm-9
-        = f.text_field :pickup_time,
-          :size => 8,
-          :value => @trip.pickup_time.try(:to_s, :time_only),
-          class: 'time-picker form-control',
-          readonly: true
+        = render 'time_field', field_name: :pickup_time, time: @trip.pickup_time, f: f
     .form-group.col-sm-12
       .col-sm-3
         = f.label :appointment_time, translate_helper("appointment_time")
       .col-sm-9
-        = f.text_field :appointment_time,
-          :size => 8,
-          :value => @trip.appointment_time.try(:to_s, :time_only),
-          class: 'time-picker form-control',
-          readonly: true
+        = render 'time_field', field_name: :appointment_time, time: @trip.appointment_time, f: f
     - if edit_mode != :show  # JavaScript for generating date and time pickers
       = render "shared/date_time_picker_javascript"
       :javascript
