--- a/app/views/repeating_trips/_repetition_fields.html.haml
+++ b/app/views/repeating_trips/_repetition_fields.html.haml
@@ -2,12 +2,20 @@
   .col-sm-3
     = f.label :start_date, translate_helper("start_date") 
   .col-sm-9
-    = f.text_field :start_date, :size => 10, :value => format_time_for_listing_day(f.object.start_date), class: 'date-picker form-control', readonly: true
+    .input-group.datepicker-icon
+      = f.text_field :start_date, :size => 10, :value => format_time_for_listing_day(f.object.start_date), class: 'datepicker form-control', readonly: true
+      .input-group-btn
+        %button.btn.btn-default{:type => "button"}
+          = image_tag "calendar-clock.png"
 .form-group.col-sm-12
   .col-sm-3
     = f.label :end_date, translate_helper("end_date") 
   .col-sm-9
-    = f.text_field :end_date, :size => 10, :value => format_time_for_listing_day(f.object.end_date), class: 'date-picker form-control', readonly: true
+    .input-group.datepicker-icon
+      = f.text_field :end_date, :size => 10, :value => format_time_for_listing_day(f.object.end_date), class: 'datepicker form-control', readonly: true
+      .input-group-btn
+        %button.btn.btn-default{:type => "button"}
+          = image_tag "calendar-clock.png"
 .form-group.col-sm-12
   .col-sm-3
     %label
